--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "epicure-admin-panel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "./admin",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
