--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "epicure-admin-panel",
   "version": "0.1.0",
-  "homepage": "/",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
